--- a/noona/rockpaperscissor/src/App.css
+++ b/noona/rockpaperscissor/src/App.css
@@ -1,13 +1,34 @@
 .box{
   border: 1px solid black;
-  width: 500px;
+  width: 800px;
+  height: 800px;
+  margin: 10px;
+  background-color: white;
+  justify-content: space-around;
+  flex-direction: column;
+  text-align: center;
+  font-size: 20pt;
 }
 
 .itme-img{
   width:400px;
+  height:400px;
 }
 
 .main{
   display: flex;
   justify-content: center;
+}
+
+.win {
+  border: 10px solid green;
+  color: green;
+}
+.lose {
+  border: 10px solid red;
+  color: red;
+}
+.tie {
+  border: 10px solid black;
+  color: black;
 }
