--- a/noona/hnm-react-router-practice/src/App.css
+++ b/noona/hnm-react-router-practice/src/App.css
@@ -24,9 +24,28 @@
     justify-content: center;
 }
 
-
-
-.cardBox:hover {
-    transform: scale(1.05);
+.card:hover {
+    transform: scale(1.1);
+    z-index: 1;
 }
 
+.product-img{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.search-box{
+    border-bottom: 1px solid black;
+    position: absolute;
+    right: 20px;
+    padding: 5px;
+  }
+  .search-box input{
+    border:none;
+    margin-left:5px;
+  }
+
+  .card{
+    border:none !important;
+    margin-bottom: 10px;
+  }
